# caliper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  caliper.eval.yaml  pyproject.toml  verdict.eval.yaml
.github/: CONTRIBUTING.md
.github/workflows/: lint.yml  publish.yml
assets/: demo.tape
caliper/: compare.py  main.py  outcome.py  reporter.py  runner.py  scoring.py  wizard.py
caliper/commands/: _addressing.py  compare.py  install_skill.py  list_cmd.py  new.py  report.py  run.py  update_cli.py  validate.py
caliper/harness/: __init__.py  base.py  claude_api.py  claude_code.py  codex.py  hermes.py  mcp.py  openai_api.py  pi.py  prompt_failure.py
caliper/judge/: __init__.py  autorater.py  base.py  claude_code_judge.py  codex_judge.py  errors.py  hermes_judge.py  openai_api_judge.py  pi_judge.py  script_assert.py
caliper/resources/: __init__.py
caliper/resources/evaluate_skill/: REFERENCE.md  SKILL.md  __init__.py
caliper/schema/: results.py  spec.py
docs/: CONTEXT.md  render_readme_samples.py
docs/adr/: 0001-attempt-outcome-taxonomy.md  0002-ruff-as-sole-formatting-authority.md  0003-cli-agent-backends-only.md  0004-engine-is-a-runtime-axis-not-a-spec-field.md  0005-hermes-backend-normalized-to-neutral-agent.md  0006-track-token-volume-and-wall-time-not-dollar-cost.md  0007-raw-success-rate-is-the-primary-metric.md  0008-mcp-servers-are-a-spec-field.md  0009-mcp-secrets-interpolated-at-the-harness-boundary.md  0010-pi-mcp-unsupported-by-design.md  0011-codex-remote-mcp-uses-static-http-headers-not-env-indirection.md
evals/claude-code-smoke/: SKILL.md  claude-code-smoke.eval.yaml
evals/commit-simple/: commit-simple.eval.yaml
evals/evaluate-skill/: evaluate-skill.eval.yaml
evals/screenshot/: screenshot.eval.yaml
evals/smoke/: claude-code-smoke.eval.yaml
evals/summarize/: SKILL.md  summarize.eval.yaml
evals/tdd/: tdd.eval.yaml
examples/: simple.eval.yaml  verdict.eval.yaml
examples/commit-commands/: README.md  commit.eval.yaml
examples/starter-pack/: README.md
examples/starter-pack/01-false-success/: SKILL.md  false-success.eval.yaml
examples/starter-pack/02-tool-misuse/: SKILL.md  tool-misuse.eval.yaml
skills/evaluate-skill/: REFERENCE.md  SKILL.md  evaluate-skill.eval.yaml
skills/grill-skill/: REFERENCE.md  SKILL.md  grill-skill.eval.yaml
tests/: claude-code-smoke.eval.yaml  codex-smoke.eval.yaml  hermes-smoke.eval.yaml  mcp-header-smoke.eval.yaml  mcp-remote-smoke.eval.yaml  mcp-smoke.eval.yaml  pi-smoke.eval.yaml  test_claude_harness.py  test_claude_judge.py  test_codex_harness.py  test_codex_judge.py  test_compare.py  test_hermes_harness.py  test_hermes_judge.py  test_install_skill.py  test_judge.py  test_judge_model_unavailable.py  test_load_spec.py  test_mcp.py  test_outcome.py  test_parse_target.py  test_pi_harness.py  test_pi_judge.py  test_prompt_failure.py  test_reporter.py  test_resolve_judge_model.py  test_run_cli.py  test_runner.py  test_scoring.py  test_transcript_persistence.py  test_update_cli.py  test_usage.py
tests/fixtures/mcp/: echo_http_server.py  (+1 more)
verdict/: main.py  reporter.py  runner.py  scoring.py  wizard.py
verdict/commands/: list_cmd.py  new.py  report.py  run.py  validate.py
verdict/harness/: __init__.py  base.py  claude_code.py  codex.py
verdict/judge/: __init__.py  autorater.py  base.py  claude_code_judge.py  codex_judge.py  script_assert.py
verdict/schema/: results.py  spec.py
(+13 files in other folders)
