[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caliper-eval"
version = "0.5.0"
description = "CLI for evaluating Claude Code skills and AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Emrick Donadei" },
]
keywords = ["ai", "agents", "evals", "skills", "codex", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.15",
    "click>=8",
    "rich>=13",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
codex = ["openai>=1.0"]
dev = ["pytest", "ruff==0.13.0", "pre-commit"]

[project.scripts]
caliper = "caliper.main:app"

[project.urls]
Homepage = "https://github.com/edonadei/caliper"
Repository = "https://github.com/edonadei/caliper"
Issues = "https://github.com/edonadei/caliper/issues"
Skills = "https://clawhub.ai/edonadei/evaluate-skill"

[tool.hatch.build.targets.wheel]
packages = ["caliper"]

[tool.ruff]
line-length = 88
target-version = "py310"
